--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
     {% endfor %}
   {% endif %}
   <div id="mapContainer" style="width: 90%; margin: 50px auto 0;">
-<script type="text/javascript" id="mmvst_globe" src="//mapmyvisitors.com/globe.js?d=zD5qY7bjVYK9yVmg-WTJ08ALMYzxqFEu62pgXIdxOK4"></script>
+<script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=3eWUqWTsIdkLkRsWGfEHgIU3IWeRsLIiiQHeD9oMBE8&cl=ffffff&w=a"></script>
   </div>
   </div>
 {% endif %}
